# fusion-dance

./: .gitignore  logger.py  preprocess.py  pyproject.toml  vq_vae.py
models/: vqvae.py
scripts/: count_vqvae_params.py  plot_vqvae_logs.py
scripts/data/: count_pokemon.py
utils/: loss.py
